# projeto_novo

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Modelfile  Modelfile.tiny  Modelfile_llama2_q4  Modelfile_tinyllama  README.md  alertmanager.yml  api.py  app.py  assistente_virtual.py  automacao.py  colab_server.py  comandos.json  comfy_integration.py  comfy_manager.py  config.json  config.py  debugger.py  docker-compose.yml  editor.py  elasticsearch.yml  exemplo_fluxo.md  extension_manager.py  extension_window.py  gunicorn.conf.py  ide_config.py  image_generator.py  jaeger.yml  kafka.properties  logging_config.py  loki.yml  main.py  main_window.py  manage.ps1  nginx.conf  (+34 more)
.cursor/: settings.json
ai_engine/: cli.py  core.py  lm_studio.py
config/: __init__.py  api_keys.json  assistente_config.json  comandos.json  config.json  game_assets_config.json  integracoes.json  interface.json  mobile_config.json  notification.json  programacao.json  seguranca_config.json  system_config.py
core/: __init__.py  agenda.py  aprendizado.py  assistente.py  assistente_otimizado.py  assistente_projeto.py  auth_manager.py  automacao_avancada.py  cache_manager.py  comfy_manager.py  configuracoes.py  editor_codigo.py  generation_manager.py  gerenciador_game_assets.py  gerenciador_mobile.py  gerenciador_preferencias.py  gerenciador_sistema_avancado.py  integracoes.py  interface.py  interface_programacao.py  monitor_seguranca.py  nlp.py  perfil_usuario.py  programacao.py  seletor_linguagem.py  servidor.py  system_manager.py  task_analyzer.py  visao.py  (+1 more)
(+64 files in other folders)
